Fixed alignment of titles on embeds

--- a/app/assets/stylesheets/embed.css
+++ b/app/assets/stylesheets/embed.css
@@ -29,7 +29,7 @@ h1 {
   text-shadow: 0 0.05em 0.03em rgba(0,0,0,0.3);
   background: none;
   margin: -5px;
-  padding: 15px;
+  padding: 20px;
 }
 
 img.iconic {
